[tool.poetry]
name = "reflex-integration-import-state"
version = "0.1.0"
description = ""
authors = ["Benedikt Bartscher <bb@senbax.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# reflex = {path = "../reflex", develop = true}
reflex = {path = "../github-bb-reflex", develop = true}
selenium = "^4.16.0"
pytest-asyncio = "^0.23.3"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
